apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:lidarr.lab.emc2.build
    traefik.port: '8686'
  labels:
    app: lidarr
  name: lidarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:lidarr.lab.emc2.build
        traefik.port: '8686'
      labels:
        app: lidarr
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: lscr.io/linuxserver/lidarr:latest
        imagePullPolicy: IfNotPresent
        name: lidarr
        ports:
        - containerPort: 8686
        resources:
          requests:
            cpu: 25m
            memory: 128Mi
          limits:
            cpu: "1"
            memory: 512Mi
        volumeMounts:
        - mountPath: /config
          name: lidarr-config
        - mountPath: /downloads
          name: media-library
      hostname: lidarr
      restartPolicy: Always
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: lidarr-config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: media-library
        persistentVolumeClaim:
          claimName: media-library
