apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  ports:
  - name: lidarr
    port: 8686
    protocol: TCP
    targetPort: 8686
  selector:
    app: lidarr
