apps/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: lidarr
  namespace: media
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - lidarr.lab.emc2.build
    secretName: lidarr-letsencrypt-tls
  rules:
  - host: lidarr.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: lidarr
            port:
              number: 8686
        path: /
        pathType: Prefix
